--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,16 @@
 {
-    "require": {
+    "name": "pgburton/phil-db",
+    "authors": [
+        {
+            "name": "Phil Burton",
+            "email": "phil@pgburton.com"
+        }
+    ],
+    "autoload": {
+        "psr-4": { "PhilDb\\": "src/" }
+    },
+    "require-dev": {
         "phpunit/phpunit":"~4.8"
-    }
+    },
+    "minimum-stability": "stable"
 }
