--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "psr-4": { "PhilDb\\": "src/" }
     },
     "require-dev": {
-        "phpunit/phpunit":"~4.8"
+        "phpunit/phpunit":"~4.8",
+        "phpdocumentor/phpdocumentor": "2.*"
     },
     "minimum-stability": "stable"
 }
