--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,10 @@
         }
     ],
     "autoload": {
-        "psr-4": { "PhilDb\\": "src/" }
+        "psr-4": {
+            "PhilDb\\": "src/",
+            "PhilDb\\Tests\\": "tests/"
+        }
     },
     "require-dev": {
         "phpunit/phpunit":"~4.8",
